zg 29.11.2017 23:09:27 +0200 - build 5104

1. 0003561: При выключении QView не меняется макрообласть.

zg 29.11.2017 18:50:13 +0200 - build 5103

1. 0002737: FCTL_SETPANELDIR напрасно закрывает панели плагинов.

zg 28.11.2017 17:39:59 +0200 - build 5102

1. FCTL_SETPANELDIRECTORY: для плагиновых панелей всегда возвращалось TRUE.

2. FCTL_SETPANELDIRECTORY: при установке директории на плагиновой панели не использовался флаг OPM_SILENT.

drkns 26.11.2017 21:10:49 +0000 - build 5101

1. Не используем GetThreadLocale().

zg 26.11.2017 17:18:49 +0200 - build 5100

1. удалена реализация макрофункции panel.SetPath.

drkns 26.11.2017 14:25:46 +0000 - build 5099

1. Уточнение 5068 - более корректно загружаем фильтры в старом формате.

2. Рефакторинг.

drkns 23.11.2017 22:33:18 +0000 - build 5098

1. 0003554: Параметр "Search only in the first" не учитывается при повторном поиске

2. "Search only in the first" вообще не работало, причем уже аж 9 лет как.

3. 0003558: No search result in FindFiles if current directory ends with a space character

drkns 15.11.2017 21:09:49 +0000 - build 5097

1. Уточнение 5095.1.

drkns 15.11.2017 18:56:07 +0000 - build 5096

1. Уточнение 5095.1.

drkns 14.11.2017 22:59:35 +0000 - build 5095

1. Рефакторинг.

2. Новая версия fmt.

3. Немного перевода справки.

4. Минимальная версия gcc - 7.1.

zg 11.11.2017 01:34:14 +0200 - build 5094

1. уточнение 5090.

pmisik 08.11.2017 18:40:00 +0000 - build 5093

1. Support to expand environment variables in title

drkns 07.11.2017 20:28:56 +0000 - build 5092

1. 0002323: WindowMode: клик в пустом пространстве вызывает меню
   0002648: Выделение мышью для копирования консольного буфера в режиме WindowMode=true

drkns 05.11.2017 15:25:38 +0000 - build 5091

1. Более интеллектуальное обрезание приглашения командной строки (покомпонентно).

zg 04.11.2017 20:22:28 +0200 - build 5090

1. откат 5082.

2. последняя FCTL_SETUSERSCREEN всегда закрывает Desktop.

shmuel 03.11.2017 16:34:19 +0200 - build 5089
