@@ -1,3 +1,7 @@
+zg 30.11.2017 02:10:31 +0200 - build 5105
+
+1. 0003529: Не приходит FE_GOTFOCUS после создания панели.
+
 zg 29.11.2017 23:09:27 +0200 - build 5104
 
 1. 0003561: При выключении QView не меняется макрообласть.
